--- a/css/1.css
+++ b/css/1.css
@@ -367,11 +367,6 @@ header .Nav-Opciones {
 }
 /**-----------------TABLA DE PRODUCTOS------------------------------**/
 
-
-
-
-
-
 /*-------- TABLA --------*/
 .Formulario-P {
   position: relative;
@@ -422,10 +417,10 @@ header .Nav-Opciones {
 /*---------------REGISTRATE-------------------*/
 #Registrar {
   position: relative;
-  background-color: transparent;
-  width: 35%;
-  left: 455px;
-  height: 510px;
+  background-color: #f9f9f9;
+  width: 40%;
+  left: 410px;
+  height: 450px;
   top: -10px;
   box-shadow: 0px 0px 10px 0px;
 }
@@ -434,7 +429,7 @@ legend {
   /*background-color: silver;*/
   border-radius: 10px;
   font-size: 15px;
-  color: darkred;
+  color: black;
   width: 100%;
   height: 85px;
 }
@@ -448,13 +443,14 @@ legend h1 {
   position: relative;
   border-right: none;
   background-color: transparent;
+  margin-left: 20px;
   padding: 0px;
   margin: 0px;
   border-left: none;
   border-top: none;
   text-decoration: none;
   top: 40px;
-  width: 70%;
+  width: 40%;
   height: 40px;
 }
 
@@ -462,6 +458,7 @@ legend h1 {
   background-color: white;
   border-radius: 10px;
 }
+
 
 .Botton-Enviar {
   position: relative;
@@ -473,7 +470,7 @@ legend h1 {
   height: 35px;
   color: trasparent;
   top: 60px;
-  color: darkred;
+  color: black;
 }
 
 .Botton-Enviar:hover {
@@ -481,10 +478,18 @@ legend h1 {
   background-color: black;
 }
 
+#btn-registrar{
+  position: relative;
+  top:70px;
+}
+
+
+
+
 /*----------LOGIN------------*/
 #Iniciar {
   position: relative;
-  background-color: transparent;
+  background-color: #f9f9f9;
   width: 32%;
   left: 479px;
   height: 490px;
@@ -496,7 +501,7 @@ legend h1 {
   position: relative;
   text-align: center;
   font-size: 40px;
-  color: darkred;
+  color: black;
 }
 
 .Input {
